--- a/client/src/styles/Sidebar.css
+++ b/client/src/styles/Sidebar.css
@@ -1,5 +1,5 @@
 .header {
-    background-color: #060b26;
+    background-color: #ffffff;
     height: 60px;
     display: flex;
     justify-content: start;
@@ -26,6 +26,7 @@
 
 .sidebar-close-icon{
     font-size: 30px !important;
+    color: white;
     margin-top: 13px;
     margin-left: -5px;
 }
@@ -38,7 +39,7 @@
   }
   
   .nav-menu {
-    background-color: #060b26;
+    background-color: #ffffff;
     width: 250px;
     height: 100vh;
     display: flex;
@@ -53,6 +54,7 @@
   .nav-menu.active {
     left: -50px;
     transition: 350ms;
+
   }
   
   .sidebar-option {
@@ -66,7 +68,7 @@
   
   .sidebar-option a {
     text-decoration: none;
-    color: #f5f5f5;
+    color: #050505;
     font-size: 18px;
     width: 95%;
     height: 100%;
@@ -77,7 +79,7 @@
   }
   
   .sidebar-option a:hover {
-    background-color: #1a83ff;
+    background-color: #939598;
     width: 80%;
     height: 100%;
   }
@@ -92,7 +94,7 @@
 }
   
 .navbar-toggle {
-    background-color: #060b26;
+    background-color: #ffffff;
     width: 100%;
     height: 80px;
     display: flex;
